[package]
name = "m-o"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-opentelemetry = { version = "0.22", features = ["metrics"] }
env_logger = "0.11"
log = "0.4"
opentelemetry = "0.29"
opentelemetry-otlp = { version = "0.29", features = ["metrics", "grpc-tonic"] }
opentelemetry-stdout = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["metrics", "rt-tokio-current-thread"] }
tokio = { version = "1.44", features = ["full"] }
