[package]
name = "m-o"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web-static-files = "4.0.1"
actix-web = "4"
env_logger = "0.11"
log = "0.4"
opentelemetry = "0.30"
opentelemetry-otlp = { version = "0.30", features = ["metrics", "grpc-tonic"] }
opentelemetry-stdout = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["metrics", "rt-tokio-current-thread"] }
opentelemetry-instrumentation-actix-web = { version = "0.22.0", features = ["metrics"] }
static-files = "0.2.3"

tokio = { version = "1.44", features = ["full"] }

[build-dependencies]
static-files = "0.2.3"
